@@ -2,6 +2,7 @@
 <!ENTITY status4evar.status.toolbar.title "Status Bar">
 <!ENTITY status4evar.status.widget.title "Status Text">
 <!ENTITY status4evar.progress.widget.title "Progress Meter">
+<!ENTITY status4evar.throbber.widget.title "Throbber">
 <!ENTITY status4evar.download.widget.title "Download Status">
 <!ENTITY status4evar.options.widget.title "Status-4-Evar Options">
 <!ENTITY status4evar.options.widget.label "Status-4-Evar">
