@@ -48,3 +48,47 @@ toolbarpaletteitem #status-bar
 	                  rgba(0,0,0,0.1) 10px);
 }
 
+@keyframes status4evar-throbber-widget-loading
+{
+	to
+	{
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes status4evar-throbber-widget-connecting
+{
+	from
+	{
+		transform: rotate(360deg);
+	}
+}
+
+#status4evar-throbber-widget
+{
+	padding: 0 12px;
+}
+
+#status4evar-throbber-widget image
+{
+	list-style-image: url("chrome://status4evar/skin/throbber-idle.png");
+	width: 16px;
+	height: 16px;
+}
+
+#status4evar-throbber-widget[busy] image
+{
+	list-style-image: url("chrome://browser/skin/tabbrowser/connecting.png");
+	animation-duration: 960ms;
+	animation-iteration-count: infinite;
+	animation-name: status4evar-throbber-widget-connecting;
+	animation-timing-function: linear;
+}
+
+#status4evar-throbber-widget[progress] image
+{
+	list-style-image: url("chrome://browser/skin/tabbrowser/loading.png");
+	animation-duration: 800ms;
+	animation-name: status4evar-throbber-widget-loading;
+}
+
