@@ -208,6 +208,7 @@ S4EWindowGetters.prototype =
 			["statusWidget",           "status4evar-status-widget"],
 			["statusWidgetLabel",      "status4evar-status-text"],
 			["strings",                "bundle_status4evar"],
+			["throbberProgress",       "status4evar-throbber-widget"],
 			["toolbarProgress",        "status4evar-progress-bar"],
 			["urlbarProgress",         "urlbar-progress-alt"]
 		],
